# water-quality-classification

./: .gitconfig  .gitignore  README.md  pyproject.toml  requirements.txt  startup.sh  training.md
Training/: train.py  water_quality_prediction.ipynb
Training/image_classify/clean/: 12th-march-lake-water-img-blog.jpeg.crdownload
Training/image_classify/dirty/: 0001_4.webp.crdownload  mixkit-garbage-floating-in-dirty-water-25549-0.avif  preview.avif
model/: README.md
src/: main.py
src/config/: app_config.py
src/ml/: models.py
src/routers/: prediction_route.py
src/services/: prediction.py
src/utils/: singleton.py
