[tool.poetry]
name = "water-prediction-api"
version = "0.1.0"
description = ""
authors = ["arunkumarc"]
readme = "README.md"
packages = [{include = "water_prediction_api"}]

[tool.poetry.dependencies]
python = "~3.9"
httpx = "^0.23.0"
loguru = "^0.6.0"
requests = "^2.28.1"
uvicorn = "^0.18.2"
fastapi = "^0.79.0"
gunicorn = "^20.1.0"
newrelic = "^8.0.0.179"
pillow = "^9.2.0"
numpy ="^1.23.3"
python-multipart = "^0.0.5"
tensorflow = "^2.10.0"
pandas = "^1.5.0"
matplotlib = "^3.6.1"
tqdm = "^4.64.1"
opencv-python ="4.6.0.66"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
